fixes for the healthcare footer, needed updated flex-direction and updates privacy settings dialog on mobile to add small margin to bottom of first paragraph

--- a/packages/design-system/src/styles/components/_Dialog.scss
+++ b/packages/design-system/src/styles/components/_Dialog.scss
@@ -85,6 +85,12 @@ dialog.fixed {
 
 .ds-c-dialog__body {
   overflow-wrap: break-word;
+
+  @media (max-width: $media-width-md) {
+    p:first-child {
+      margin-block: $spacer-1 $spacer-3;
+    }
+  }
 }
 
 .ds-c-dialog__actions {
