--- a/packages/ds-healthcare-gov/src/styles/components/_Footer.scss
+++ b/packages/ds-healthcare-gov/src/styles/components/_Footer.scss
@@ -16,6 +16,7 @@
 
   ul[role='list'] {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     gap: var(--spacer-1) 0;
     list-style: none;
